--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,17 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+# Project uploads / media
+media/
+*.pdf
+
+# VS Code
+.vscode/
+
+# Project uploads / media
+media/
+*.pdf
+
+# VS Code
+.vscode/
